# drdv.github.io

./: .gitignore  .requirements.txt  404.html  CNAME  Dockerfile  Makefile  Makefile.in  Makefile.inc  bibtex.html  cv.html  index.html  jemdoc.css  mkdocs.yml  pgp.html  publications.html  pyproject.toml  scripts.html  sitemap.xml
.github/workflows/: docs.yml
blog/: Makefile  index.html
blog/2024/202411-summer-walking-challenge/: index.html
blog/2024/202412-python-strings/: index.html
blog/2024/python-strings/: index.html
blog/202411-summer-walking-challenge/: Makefile  index.html  main.py
blog/202412-python-strings/: Makefile  emoji.py  index.html  verify_string_encoding.py
blog/202511-make-double-colon-rules/: index.html
blog/202511-makefile-doc/: index.html
blog/20251101-makefile-doc/: index.html
blog/202512-make-adding-builtin-function/: index.html
blog/202512-make-double-expand/: index.html  tmp
blog/202512-tracking-food/: Makefile  index.html
blog/summer-walking-challenge/: Makefile  index.html  utils.py
css/: extra.css
cv/: index.html
cv_pdf/: Makefile  cv.txt
eqs/: .eqdepthcache
gpg/: index.html
mkdocs/: mkdocs.yml
mkdocs/src/: cv.md  index.md  publications.md
publications/: index.html
scripts/: makefile-help-target.awk
search/: search_index.json
snippets/: gpg.pub
src/: MENU  Makefile  bibtex.jemdoc  coauthors.txt  cv.jemdoc  cv.md  gpg.md  index.jemdoc  index.md  pgp.jemdoc  publications.jemdoc  publications.md  scripts.jemdoc
src/blog/: Makefile  index.md
src/snippets/: gpg.pub
src/stylesheets/: extra.css
(+38 files in other folders)
