[project]
name = "drdv-github-io"
version = "0.1.0"
description = "Website of Dimitar Dimitrov"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansi2html>=1.9.2",
    "markdown-exec>=1.11.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.6.22",
    "mkdocs-thumbnails>=0.0.10",
]
